--- a/starter_files/characters.html
+++ b/starter_files/characters.html
@@ -1,4 +1,4 @@
-<!doctype html>
+!doctype html>
 <html>
     <head>
       <meta charset="utf-8">
@@ -10,11 +10,18 @@
           Star vs. The Forces of Evil
         </h1>
         <IMAGE></IMAGE>
-      <img src="https://media.giphy.com/media/10PFUoJu4psvCw/giphy.gif?response_id=591e3aa50b3724d34101e235" alt="n/a">
+          <img src="https://media.giphy.com/media/10PFUoJu4psvCw/giphy.gif?response_id=591e3aa50b3724d34101e235" alt="n/a">
     </head>
 
     <body>
       <hr></hr>
+      <h3>Characters</h3>
+        <ul>
+          <li>
+            <h4>Star Butterfly</h4>
+          </li>
+        </ul>
+      <p>
 
 
     </body>
