--- a/starter_files/characters.html
+++ b/starter_files/characters.html
@@ -1,11 +1,11 @@
-!doctype html>
+
 <html>
     <head>
       <meta charset="utf-8">
       <a href="#">Home</a>
       <a href="#">Characters</a>
       <a href="#">Season One</a>
-      <title>Star vs. The Forces of Evil<title>
+      <title>Star vs. The Forces of Evil</title>
         <h1>
           Star vs. The Forces of Evil
         </h1>
@@ -22,6 +22,8 @@
           </li>
         </ul>
       <p>
+        Princess Star Butterfly is the main protagonist of Star vs. the Forces of Evil. She is a teenage princess of the kingdom of Mewni (located in another dimension) sent to Earth by her parents in order to learn how to use the royal magic wand.
+      </p>
 
 
     </body>
