--- a/starter_files/characters.html
+++ b/starter_files/characters.html
@@ -13,7 +13,7 @@
           <img src="https://media.giphy.com/media/10PFUoJu4psvCw/giphy.gif?response_id=591e3aa50b3724d34101e235" alt="n/a">
     </head>
 
-    <body>
+      <body>
       <hr></hr>
       <h3>Characters</h3>
         <ul>
@@ -46,12 +46,11 @@
             <p>
               Ludo is a major antagonist of Star vs. the Forces of Evil. In season 1, he uses an army of monsters in order to steal Star's wand and take over the universe. As of season 2, however, he has his own wand and new monster followers. Toward the end of season 2, his body is possessed by Toffee.
             </p>
+          </ul>
+<hr>
 
-
-
-
-
-
-
-    </body>
+        <a href="#">Home</a>
+        <a href="#">Characters</a>
+        <a href="#">Season One</a>
+        </body>
 </html>
