--- a/starter_files/season_one.html
+++ b/starter_files/season_one.html
@@ -1,9 +1,9 @@
 <html>
     <head>
       <meta charset="utf-8">
-      <a href="#">Home</a>
-      <a href="#">Characters</a>
-      <a href="#">Season One</a>
+      <a href="index.html">Home</a>
+      <a href="characters.html">Characters</a>
+      <a href="season_one.html">Season One</a>
       <title>Star vs. The Forces of Evil</title>
         <h1>
           Star vs. The Forces of Evil
@@ -12,8 +12,8 @@
           <img src="https://media.giphy.com/media/EqaHCIczZPYKk/giphy.gif?response_id=591e3f75a755c13b580552ba" alt="n/a">
     </head>
     <body>
-
-      <h3>Season One<h3>
+      <h3>Season One</h3>
+<hr>
       <table>
         <tr>
           <th>Episode Number</th>
@@ -22,13 +22,33 @@
         </tr>
         <tr>
           <td>01</td>
-          <td>Star Comes to Earth</td>
+          <td>"Star Comes to Earth"</td>
           <td>March 30, 2015</td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>02</td>
+          <td>"Party With a Pony"</td>
+          <td>March 30, 2015</td>
+        </tr>
+        <tr>
+          <td>03</td>
+          <td>"Match Maker"</td>
+          <td>March 30, 2015</td>
+        </tr>
+        <tr>
+          <td>04</td>
+          <td>"School Spirit"</td>
+          <td>March 30, 2015</td>
+        </tr>
+        <tr>
+          <td>05</td>
+          <td>"Monster Arm"</td>
+          <td>April 6, 2015</td>
+        </tr>
+        <tr>
+          <td>06</td>
+          <td>"The Other Exchange Student"</td>
+          <td>April 6, 2015</td>
         </tr>
         <tr>
           <td></td>
@@ -120,34 +140,12 @@
           <td></td>
           <td></td>
         </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
+      </table>
 
-<hr>
 
-
-<hr>
 
         <a href="#">Home</a>
         <a href="#">Characters</a>
         <a href="#">Season One</a>
-        </body>
+    </body>
 </html>
