added links to index.html

--- a/starter_files/index.html
+++ b/starter_files/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
       <meta charset="utf-8">
-      <a href="#">Home</a>
-      <a href="#">Characters</a>
-      <a href="#">Season One</a>
+      <a href="index.html">Home</a>
+      <a href="characters.html">Characters</a>
+      <a href="season_one.html">Season One</a>
       <title>Star vs. The Forces of Evil</title>
         <h1>
           Star vs. The Forces of Evil
