10 episodes is all you get for free

--- a/starter_files/season_one.html
+++ b/starter_files/season_one.html
@@ -51,24 +51,24 @@
           <td>April 6, 2015</td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>07</td>
+          <td>"Cheer Up, Star"</td>
+          <td>April 13, 2015</td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>08</td>
+          <td>"Quest Buy"</td>
+          <td>April 13, 2015</td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>09</td>
+          <td>"Diaz Family Vacation"</td>
+          <td>April 20, 2015</td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>10</td>
+          <td>"Brittney's Party"</td>
+          <td>April 20, 2015</td>
         </tr>
         <tr>
           <td></td>
